[package]
name = "framels"
version = "0.7.8"
edition = "2024"
authors = ["Philippe Llerena<philippe.llerena@gmail.com>"]
description = "a simple command line tool to list frame sequence in friendly way"
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/forticheprod/fls"
exclude = ["images", "samples", ".devcontainer", ".github", "comparaison"]

[[bin]]
name = "fls"
path = "src/main.rs"

[profile.release]
lto = true

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
exr = "1.73.0"
jwalk = "0.8.1"
lazy_static = "1.5.0"
rayon = "1.10.0"
wide = "0.7.32"

[dependencies.regex]
version = "1.11.1"
default-features = false
# regex currently requires the standard library, you must re-enable it.
features = ["std", "unicode-perl"]

[dev-dependencies]
criterion = "0.6.0"
serde_json = "1.0.140"
serde = "1.0.219"
assert_cmd = "2.0.17"
predicates = "3.1.3"
sys-locale = "0.3.2"

[[bench]]
name = "mega"
harness = false
