[package]
name = "framels"
version = "1.0.0"
edition = { workspace = true }
authors = { workspace = true }
description = "a simple command line tool to list frame sequence in friendly way"
readme = { workspace = true }
license-file = "../LICENSE"
repository = { workspace = true }
exclude = ["samples"]

[[bin]]
name = "fls"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
exr = "1.72.0"
jwalk = "0.8.1"
lazy_static = { workspace = true }
framels-core = { path = "../framels-core" }

[dev-dependencies]
criterion = "0.5"
serde_json = "1.0.115"
serde = "1.0.200"
assert_cmd = "2.0.14"
predicates = "3.1.0"
sys-locale = "0.3.1"

[dependencies.regex]
version = "1.10.4"
default-features = false
# regex currently requires the standard library, you must re-enable it.
features = ["std", "unicode-perl"]

[[bench]]
name = "mega"
harness = false
